; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_autoext.c_cube_init.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_autoext.c_cube_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"cube\00", align 1
@SQLITE_ANY = common dso_local global i32 0, align 4
@cubeFunc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8**, i32*)* @cube_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cube_init(i32* %0, i8** %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = call i32 @SQLITE_EXTENSION_INIT2(i32* %7)
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* @SQLITE_ANY, align 4
  %11 = load i32, i32* @cubeFunc, align 4
  %12 = call i32 @sqlite3_create_function(i32* %9, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 1, i32 %10, i32 0, i32 %11, i32 0, i32 0)
  ret i32 0
}

declare dso_local i32 @SQLITE_EXTENSION_INIT2(i32*) #1

declare dso_local i32 @sqlite3_create_function(i32*, i8*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
